<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/listLayout"
        layout="@layout/user_list" />

    <ImageView
        android:id="@+id/starterImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="82dp"
        android:contentDescription="@string/search"
        android:src="@drawable/search_back" />

</RelativeLayout>